fix: package.json for test

--- a/.github/workflows/1-3-release.yaml
+++ b/.github/workflows/1-3-release.yaml
@@ -41,6 +41,7 @@ jobs:
           failed-label: 'release:failed-to-release'
 
   version-and-tag:
+    needs: [update-pr-label-test]
     runs-on: ubuntu-latest
     outputs:
       continue: ${{ steps.version.outputs.continue }}
