--- a/actions/bump-version-and-tag/action.yaml
+++ b/actions/bump-version-and-tag/action.yaml
@@ -142,6 +142,7 @@ runs:
         config: cliff.toml
         args: --prepend CHANGELOG.md --latest --tag "v${{ steps.versioning.outputs.version }}"
       env:
+        OUTPUT: ""
         GITHUB_REPO: ${{ github.repository }}
 
     - name: Commit version bump to main branch
