--- a/actions/create-release-pr/action.yaml
+++ b/actions/create-release-pr/action.yaml
@@ -94,9 +94,7 @@ runs:
 
         # Append PR body suffix
         CURRENT_BODY=$(gh pr view "${PR_NUMBER}" --json body --jq '.body')
-        NEW_BODY="${CURRENT_BODY}
-
-${PR_BODY_SUFFIX}"
+        NEW_BODY="${CURRENT_BODY}\n${PR_BODY_SUFFIX}"
         gh pr edit "${PR_NUMBER}" --body "$NEW_BODY"
         echo "PR body updated for ${PR_NUMBER}."
       env:
